# roulette-uets

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
src/api/v1/: app.py
src/api/v1/routers/: answer_router.py  game_router.py  main_router.py  option_router.py  participant_router.py  period_router.py  question_router.py  record_router.py  subject_router.py
src/api/v1/services/: answer_service.py  game_service.py  option_service.py  participant_service.py  period_service.py  question_service.py  record_service.py  subject_service.py
src/core/config/: database.py
src/core/models/: answer_model.py  game_model.py  option_model.py  participant_model.py  period_model.py  question_model.py  record_model.py  subject_model.py
src/core/schemas/: answer_schema.py  game_schema.py  option_schema.py  participant_schema.py  period_schema.py  question_schema.py  record_schema.py  subject_schema.py
