[tool.poetry]
name = "roulette-uets"
version = "0.1.0"
description = "Backend con lógica de negocio para la aplicación de Ruleta del conocimiento de la Unidad Educativa \"Técnico Salesiano\""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-decouple = "^3.8"
psycopg2 = "^2.9.10"
fastapi = {extras = ["all"], version = "^0.115.6"}
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
